# mkdeb

./: Cargo.toml  build.rs  mkdeb.toml
src/: cli.rs  deb.rs  github.rs  main.rs
