[package]
name = "mkdeb"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/dmarion/mkdeb"
authors = ["dmarion"]

[dependencies]
bytesize = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.4", features = ["derive", "color"] }
dirs = "6.0"
env_logger = { version = "0.11", features = ["color"] }
flate2 = "1.0"
futures-util = "0.3.31"
indicatif = "0.17.11"
log = "0.4.27"
prettytable = "0.10.0"
rayon = "1.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.8"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8"

[build-dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
clap_complete = "4.4"

[package.metadata.deb]
maintainer = "Damjan Marion <damjan.marion@gmail.com>"
extended-description = """\
A simple .deb package manager"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/mkdeb", "usr/bin/", "755"],
  ["target/release/completions/mkdeb.bash", "usr/share/bash-completion/completions/mkdeb", "644"],
  ["target/release/completions/_mkdeb", "usr/share/zsh/site-functions/_mkdeb", "644"]
]
